--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <packaging>jar</packaging>
     <build>
         <plugins>
-           <!-- <plugin>
+           <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                     <configuration>
                         <descriptors>
-                            <descriptor>src/main/conf/descriptor.xml</descriptor>
+                            <descriptor>src/main/conf/assembly.xml</descriptor>
                         </descriptors>
                         <outputDirectory>target/artifacts</outputDirectory>
                     </configuration>
@@ -25,7 +25,7 @@
                             </goals>
                         </execution>
                     </executions>
-            </plugin> -->
+            </plugin>
          <plugin>
              <artifactId>maven-dependency-plugin</artifactId>
              <version>3.1.0</version>
